[project]
name = "ontheflipside"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.5",
]

[dependency-groups]
dev = [
    "pylsp-mypy>=0.7.0",
    "python-lsp-server>=1.13.0",
    "ruff>=0.12.5",
]

[tool.mypy]
strict = true
show_column_numbers = true
python_executable = ".venv/bin/python"

[tool.ruff]
fix = true
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
